--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+	background-image: url("http://www.kinyu-z.net/data/wallpapers/64/926429.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
