--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("http://www.kinyu-z.net/data/wallpapers/64/926429.jpg");
+	background-image: url("http://wallpapercare.com/wp-content/uploads/2017/01/bright-multi-colour-poligon-3d-fhd-wallpaper.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
