--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,10 @@ html {
 
 body {
 	background-image: url("http://wallpapercare.com/wp-content/uploads/2017/01/bright-multi-colour-poligon-3d-fhd-wallpaper.jpg");
-  font: 18px/1.4 $helvetica;
+ background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
 
