--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
 	background-attachment: fixed;
 	background-position: center;
 	font: 18px/1.4 $helvetica;
-	font-color: #ccffff;
+	font-color: ##00ffff;
 }
 
 .container {
